--- a/index.html
+++ b/index.html
@@ -113,5 +113,5 @@
     </noscript>
     <!-- The root element for your Expo app. -->
     <div id="root"></div>
-  <script src="/bundles/web-fe2ca07dd4c32617a7d9c4cf488cd1e0.js" defer></script></body>
+  <script src="./bundles/web-fe2ca07dd4c32617a7d9c4cf488cd1e0.js" defer></script></body>
 </html>
